chore: add sharp image processing dependency

--- a/packages/monad-website/pages/about.html
+++ b/packages/monad-website/pages/about.html
@@ -25,7 +25,7 @@
     </ul>
   </section>
 
-  <% cta_band.html, { "title": "Want a production-grade landing page build?", "buttonText": "Get Started", "buttonHref": "https://github.com/anthropics/monad" } %>
+  <% cta_band.html, { "title": "Want a production-grade landing page build?", "buttonText": "Get Started", "buttonHref": "https://github.com/WynterJones/monad" } %>
 </main>
 
 <% footer.html %>
