--- a/packages/monad-website/pages/guide.html
+++ b/packages/monad-website/pages/guide.html
@@ -54,22 +54,22 @@ npm run dev</code></pre>
 
     <div class="concept-grid">
       <div class="concept-card">
-        <h3>📄 Pages</h3>
+        <h3>Pages</h3>
         <p>HTML files with optional JSON frontmatter for metadata.</p>
         <a href="/features/" class="concept-link">Learn more →</a>
       </div>
       <div class="concept-card">
-        <h3>🧩 Partials</h3>
+        <h3>Partials</h3>
         <p>Reusable HTML components with data passing.</p>
         <a href="/advanced/" class="concept-link">Learn more →</a>
       </div>
       <div class="concept-card">
-        <h3>📝 Markdown</h3>
+        <h3>Markdown</h3>
         <p>Full GFM support with YAML frontmatter.</p>
         <a href="/markdown-demo/" class="concept-link">See demo →</a>
       </div>
       <div class="concept-card">
-        <h3>🔁 Collections</h3>
+        <h3>Collections</h3>
         <p>Loop through JSON data in templates.</p>
         <a href="/collections-demo/" class="concept-link">See examples →</a>
       </div>
@@ -122,28 +122,24 @@ robots: { enabled: true }</code></pre>
 
     <div class="practice-list">
       <div class="practice-item">
-        <div class="practice-icon">🎯</div>
         <div>
           <h3>Use Semantic HTML</h3>
           <p>Monad respects your markup. Use proper heading hierarchy and semantic elements.</p>
         </div>
       </div>
       <div class="practice-item">
-        <div class="practice-icon">🚀</div>
         <div>
           <h3>Optimize Images</h3>
           <p>Let Monad handle image optimization. Use high-quality sources and appropriate formats.</p>
         </div>
       </div>
       <div class="practice-item">
-        <div class="practice-icon">📊</div>
         <div>
           <h3>Monitor Build Reports</h3>
           <p>Check <code>dist/__monad/report.html</code> for SEO and performance insights.</p>
         </div>
       </div>
       <div class="practice-item">
-        <div class="practice-icon">♻️</div>
         <div>
           <h3>Reuse Partials</h3>
           <p>Create partials for repeated elements to maintain consistency.</p>
@@ -177,7 +173,7 @@ robots: { enabled: true }</code></pre>
   <% cta_band.html, {
     "title": "Ready to build something amazing?",
     "buttonText": "Start Building",
-    "buttonHref": "https://github.com/anthropics/monad"
+    "buttonHref": "https://github.com/WynterJones/monad"
   } %>
 </main>
 
