--- a/packages/monad-website/pages/use-cases.html
+++ b/packages/monad-website/pages/use-cases.html
@@ -19,7 +19,6 @@
   <section class="use-cases-grid mb-20">
     <!-- monad:loop useCase in useCases -->
     <div class="use-case-card">
-      <div class="use-case-icon">{{useCase.icon}}</div>
       <h3 class="use-case-title">{{useCase.title}}</h3>
       <p class="use-case-description">{{useCase.description}}</p>
 
@@ -96,7 +95,7 @@
   <% cta_band.html, {
     "title": "Ready to start your project?",
     "buttonText": "Get Started",
-    "buttonHref": "https://github.com/anthropics/monad"
+    "buttonHref": "https://github.com/WynterJones/monad"
   } %>
 </main>
 
