--- a/packages/monad-website/pages/collections-demo.html
+++ b/packages/monad-website/pages/collections-demo.html
@@ -1,7 +1,7 @@
 <!-- monad
 {
   "title": "Collections Demo - Monad",
-  "description": "Demonstration of Monad's content collections feature with testimonials, features, and team members."
+  "description": "Demonstration of Monad's content collections feature with testimonials and features."
 }
 -->
 
@@ -34,42 +34,15 @@
       <!-- monad:loop testimonial in testimonials -->
       <div class="bg-gray-50 rounded-lg p-6">
         <div class="flex items-center mb-4">
-          <img src="{{testimonial.avatar}}" alt="{{testimonial.name}}"
-               class="w-12 h-12 rounded-full mr-4 object-cover">
+          <div class="w-12 h-12 rounded-full mr-4 bg-blue-500 flex items-center justify-center text-white font-bold">
+            {{testimonial.initials}}
+          </div>
           <div>
             <h4 class="font-semibold">{{testimonial.name}}</h4>
             <p class="text-sm text-gray-600">{{testimonial.role}} at {{testimonial.company}}</p>
           </div>
         </div>
         <blockquote class="text-gray-700 italic mb-4">"{{testimonial.quote}}"</blockquote>
-        <div class="flex text-yellow-400">
-          <!-- Simple star rating based on rating number -->
-          ⭐⭐⭐⭐⭐
-        </div>
-      </div>
-      <!-- monad:endloop -->
-    </div>
-  </section>
-
-  <!-- Team Section using Collections -->
-  <section class="mb-20">
-    <h2 class="text-3xl font-bold text-center mb-12">Meet the Team</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto">
-      <!-- monad:loop member in team -->
-      <div class="bg-white rounded-lg shadow-md overflow-hidden">
-        <img src="{{member.avatar}}" alt="{{member.name}}"
-             class="w-full h-64 object-cover">
-        <div class="p-6">
-          <h3 class="text-xl font-semibold mb-1">{{member.name}}</h3>
-          <p class="text-blue-600 font-medium mb-3">{{member.role}}</p>
-          <p class="text-gray-600 mb-4">{{member.bio}}</p>
-          <div class="flex space-x-4">
-            <a href="https://twitter.com/{{member.social.twitter}}"
-               class="text-blue-400 hover:text-blue-600">Twitter</a>
-            <a href="https://github.com/{{member.social.github}}"
-               class="text-gray-700 hover:text-gray-900">GitHub</a>
-          </div>
-        </div>
       </div>
       <!-- monad:endloop -->
     </div>
